examples/LINUX/tests/errors/else-dangling.biplan


// else syntax check, this program contains a dangling else.
// Compiler should return "non matching if else end" error

print "Hi!"
else
stop